tests/compilation_error/optional_parameter_non_literal_default.ll
def getInt() returns int:
    return 42

def foo(int x=getInt()):
    print x
